--- a/src/AppPlugins/file/src/file_service/host_restore/CMakeLists.txt
+++ b/src/AppPlugins/file/src/file_service/host_restore/CMakeLists.txt
@@ -10,13 +10,13 @@ add_library(host_restore_obj
 target_include_directories(host_restore_obj
     PRIVATE
     ${CMAKE_CURRENT_SOURCE_DIR}/../
-    ${CMAKE_CURRENT_SOURCE_DIR}/../../../../../framework/inc/job/
-    ${CMAKE_CURRENT_SOURCE_DIR}/../../../../../framework/inc/thrift_interface
-    ${CMAKE_CURRENT_SOURCE_DIR}/../../../../../framework/inc
-    ${CMAKE_CURRENT_SOURCE_DIR}/../../../../../framework/inc/client
-    ${CMAKE_CURRENT_SOURCE_DIR}/../../../../../framework/inc/common
-    ${CMAKE_CURRENT_SOURCE_DIR}/../../../../../framework/inc/rpc
-    ${CMAKE_CURRENT_SOURCE_DIR}/../../../../../framework/inc/rpc/certificateservice
+    ${PLUGIN_FRAMEWORK_PATH}/inc/job/
+    ${PLUGIN_FRAMEWORK_PATH}/inc/thrift_interface
+    ${PLUGIN_FRAMEWORK_PATH}/inc
+    ${PLUGIN_FRAMEWORK_PATH}/inc/client
+    ${PLUGIN_FRAMEWORK_PATH}/inc/common
+    ${PLUGIN_FRAMEWORK_PATH}/inc/rpc
+    ${PLUGIN_FRAMEWORK_PATH}/inc/rpc/certificateservice
 
 
     ${PLUGIN_SRC_PATH}/utils
