Match-id-5c3a770251fc532e05af3b93b66cbaa95319a534

--- a/src/ProtectAgent/component/protectagent/protectagent/Agent/ci/script/PackingRules/general/linux/FilePlugin.conf
+++ b/src/ProtectAgent/component/protectagent/protectagent/Agent/ci/script/PackingRules/general/linux/FilePlugin.conf
@@ -1,1 +1,1 @@
-cp Plugins/FilePlugin.tar.xz {package_dir}/ProtectClient-e/Plugins
+cp Plugins/FilePlugin_*.tar.xz {package_dir}/ProtectClient-e/Plugins
