--- a/src/ProtectAgent/component/protectagent/protectagent/Agent/ci/script/PackingRules/general/linux/NasPlugin.conf
+++ b/src/ProtectAgent/component/protectagent/protectagent/Agent/ci/script/PackingRules/general/linux/NasPlugin.conf
@@ -1,1 +1,1 @@
-cp Plugins/NasPlugin.tar.xz {package_dir}/ProtectClient-e/Plugins
+cp Plugins/NasPlugin_*.tar.xz {package_dir}/ProtectClient-e/Plugins
