--- a/src/ProtectAgent/component/protectagent/protectagent/Agent/ci/script/PackingRules/general/linux/ObsPlugin.conf
+++ b/src/ProtectAgent/component/protectagent/protectagent/Agent/ci/script/PackingRules/general/linux/ObsPlugin.conf
@@ -1,1 +1,1 @@
-cp Plugins/ObsPlugin.tar.xz {package_dir}/ProtectClient-e/Plugins
+cp Plugins/ObsPlugin_*.tar.xz {package_dir}/ProtectClient-e/Plugins
