--- a/src/ProtectAgent/component/protectagent/protectagent/Agent/ci/script/PackingRules/general/linux/FusionComputePlugin.conf
+++ b/src/ProtectAgent/component/protectagent/protectagent/Agent/ci/script/PackingRules/general/linux/FusionComputePlugin.conf
@@ -1,1 +1,1 @@
-cp Plugins/FusionComputePlugin.tar.xz {package_dir}/ProtectClient-e/Plugins
+cp Plugins/FusionComputePlugin_*.tar.xz {package_dir}/ProtectClient-e/Plugins
