--- a/src/ProtectAgent/component/protectagent/protectagent/Agent/ci/script/PackingRules/general/linux/GeneralDBPlugin.conf
+++ b/src/ProtectAgent/component/protectagent/protectagent/Agent/ci/script/PackingRules/general/linux/GeneralDBPlugin.conf
@@ -1,2 +1,2 @@
-cp Plugins/GeneralDBPlugin.tar.xz {package_dir}/ProtectClient-e/Plugins
-cp Plugins/Block_Service.tar.xz {package_dir}/ProtectClient-e/Plugins
+cp Plugins/GeneralDBPlugin_*.tar.xz {package_dir}/ProtectClient-e/Plugins
+cp Plugins/Block_Service_*.tar.xz {package_dir}/ProtectClient-e/Plugins
