--- a/src/ProtectAgent/component/protectagent/protectagent/Agent/vsprj/agentprj/tools/agentsdk/agentsdk.vcxproj.filters
+++ b/src/ProtectAgent/component/protectagent/protectagent/Agent/vsprj/agentprj/tools/agentsdk/agentsdk.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClInclude Include="..\..\..\..\src\inc\common\Utils.h">
       <Filter>common</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\..\src\inc\common\StaticConfig.h">
+      <Filter>common</Filter>
+    </ClInclude>
     <ClInclude Include="..\..\..\..\src\inc\common\CSystemExec.h">
       <Filter>common</Filter>
     </ClInclude>
@@ -156,6 +159,9 @@
       <Filter>common</Filter>
     </ClCompile>
     <ClCompile Include="..\..\..\..\src\src\common\Utils.cpp">
+      <Filter>common</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\src\src\common\StaticConfig.cpp">
       <Filter>common</Filter>
     </ClCompile>
     <ClCompile Include="..\..\..\..\src\src\common\SystemExec.cpp">
