Match-id-95ca88fa9c386b6a5f0e373e08d4bb82f739fe6d

--- a/src/ProtectAgent/component/protectagent/protectagent/Agent/ci/script/PackingRules/general/linux/FilePlugin.conf
+++ b/src/ProtectAgent/component/protectagent/protectagent/Agent/ci/script/PackingRules/general/linux/FilePlugin.conf
@@ -1,1 +1,1 @@
-cp Plugins/FilePlugin_*.tar.xz {package_dir}/ProtectClient-e/Plugins
+cp Plugins/FilePlugin_aarch64.tar.xz {package_dir}/ProtectClient-e/Plugins
