--- a/src/ProtectAgent/component/protectagent/protectagent/Agent/ci/script/PackingRules/general/linux/VirtualizationPlugin.conf
+++ b/src/ProtectAgent/component/protectagent/protectagent/Agent/ci/script/PackingRules/general/linux/VirtualizationPlugin.conf
@@ -1,1 +1,1 @@
-cp Plugins/VirtualizationPlugin_*.tar.xz {package_dir}/ProtectClient-e/Plugins
+cp Plugins/VirtualizationPlugin_aarch64.tar.xz {package_dir}/ProtectClient-e/Plugins
