Match-id-4c694a2e7922ad71673c7dc0f553cbbf7fb56f47

--- a/src/AppPlugins/virtualization/CMakeLists.txt
+++ b/src/AppPlugins/virtualization/CMakeLists.txt
@@ -97,6 +97,7 @@ target_link_libraries(virtualization_plugin
     openstack_engine
     cnware_engine
     apsara_stack_engine
+    nutanix_engine
 
     PUBLIC
     pluginsdk
@@ -140,6 +141,7 @@ target_link_libraries(virtualization_plugin
     openstack_engine
     cnware_engine
     apsara_stack_engine
+    nutanix_engine
 
     PUBLIC
     pluginsdk
