Match-id-1c3881487a4c776f0fb03101a077265ce61fe9b2

--- a/src/ProtectManager/component/PM_System_Base_Common_Service/src/pm-framework/pm-access-provider-sdk/pom.xml
+++ b/src/ProtectManager/component/PM_System_Base_Common_Service/src/pm-framework/pm-access-provider-sdk/pom.xml
@@ -73,6 +73,10 @@
             <groupId>com.huawei.oceanprotect</groupId>
             <artifactId>pm-sla-sdk</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.huawei.oceanprotect</groupId>
+            <artifactId>pm-label-sdk</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
