Match-id-9fd4c22fd9e0a61b7f104d33c9de45381ae2e2c6

--- a/src/ProtectManager/component/PM_API_Gateway/IngressRoute/Opensource/pm/ingress-route-pm-agent-manager.yaml
+++ b/src/ProtectManager/component/PM_API_Gateway/IngressRoute/Opensource/pm/ingress-route-pm-agent-manager.yaml
@@ -32,6 +32,16 @@ spec:
       middlewares:
         - name: middleware-pm-replace-path-regex
         - name: middleware-pm-jwt-token-auth
+    - match: Method(`GET`) && Path(`/v1/host-agent/{uuid:\w{8}(-\w{4}){3}-\w{12}}/vmware`)
+      kind: Rule
+      services:
+        - name: pm-nginx
+          port: 30093
+          scheme: https
+          serversTransport: serverstransport-traefik-backend
+      middlewares:
+        - name: middleware-pm-replace-path-regex
+        - name: middleware-pm-jwt-token-auth
     - match: Method(`GET`) && Path(`/v1/host-agent/agents`)
       kind: Rule
       services:
