Match-id-5fd337888da30d9f93a83f40aa3994b8959c53f6

--- a/src/ProtectAgent/component/protectagent/protectagent/Agent/ci/script/PackingRules/general/linux/FilePlugin.conf
+++ b/src/ProtectAgent/component/protectagent/protectagent/Agent/ci/script/PackingRules/general/linux/FilePlugin.conf
@@ -1,1 +1,1 @@
-cp Plugins/FilePlugin_aarch64.tar.xz {package_dir}/ProtectClient-e/Plugins
+cp Plugins/FilePlugin.tar.xz {package_dir}/ProtectClient-e/Plugins
